--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
 			<version>5.2.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.10.0</version>
+		</dependency>
+
+
 
 	</dependencies>
 
